syntax = "proto3";

option go_package = "backuptask/";

service MasterService {
  rpc RequestWorker(BackupTaskRequest) returns (WorkerAssignmentResponse);
  rpc ReportWorkerStatus(WorkerStatusRequest) returns (WorkerStatusResponse);
}

message BackupTaskRequest {
  string file_name = 1;
  int64 file_size = 2;

}

message WorkerAssignmentResponse {
  string worker_ip = 1;
  int32 worker_port = 2;
  string sftp_username = 3;
  string sftp_password = 4;
}

message WorkerStatusRequest {
  string worker_id = 1;
  bool is_available = 2;
}

message WorkerStatusResponse {
  string status = 1;
}

